feat(category): 添加图书分类列表查询，修复了部门SQL语法错误